nestedtemplates/security-shared-resources.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "securityGroupName": {
      "type": "string",
      "defaultValue": "solace-security",
      "metadata": {
        "description": "Security group defined to support PubSub+ message broker system level and default message vpn ports."
      }
    },
    "subnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
        "description": "Subnet for PubSub+ message brokers."
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    }
  },
  "variables": {},
  "resources": [
    {
      "name": "[parameters('securityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-04-01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "outbound",
            "properties": {
              "priority": 100,
              "sourceAddressPrefix": "[parameters('subnetPrefix')]",
              "sourcePortRange": "*",
              "protocol": "*",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Outbound",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "ssh",
            "properties": {
              "priority": 150,
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "protocol": "Tcp",
              "destinationPortRange": "22",
              "access": "Allow",
              "direction": "Inbound",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "ConfluenSchemaRegistry",
            "properties": {
              "priority": 160,
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "protocol": "Tcp",
              "destinationPortRange": "8081",
              "access": "Allow",
              "direction": "Inbound",
              "destinationAddressPrefix": "[parameters('subnetPrefix')]"
            }
          },
          {
            "name": "KafkaConnect",
            "properties": {
              "priority": 170,
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "8083",
              "destinationAddressPrefix": "[parameters('subnetPrefix')]"
            }
          },
          {
            "name": "ConfluentKqsl",
            "properties": {
              "priority": 180,
              "protocol": "TCP",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "8088",
              "destinationAddressPrefix": "[parameters('subnetPrefix')]"
            }
          },
          {
            "name": "ConfluentControlCenter",
            "properties": {
              "priority": 190,
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "protocol": "Tcp",
              "destinationPortRange": "9021",
              "access": "Allow",
              "direction": "Inbound",
              "destinationAddressPrefix": "[parameters('subnetPrefix')]"
            }
          },
          {
            "name": "KafkaBroker",
            "properties": {
              "priority": 199,
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "protocol": "Tcp",
              "destinationPortRange": "9092",
              "access": "Allow",
              "direction": "Inbound",
              "destinationAddressPrefix": "[parameters('subnetPrefix')]"
            }
          }
        ]
      }
    }
  ]
}
